searchToBasket locators updated